# simple-kube-knative-req

./: Cargo.toml
spec/: Cargo.toml  DEVELOPMENT.md
spec/proptest-regressions/: gvk.txt
spec/src/: gvk.rs  lib.rs
spec/src/gvk/: api.md  api.rs  client.rs  gvk_spec.md  gvk_spec.rs  mod.rs
spec/src/gvk/snapshots/: kube_do_spec__gvk__api__show_api.snap  kube_do_spec__gvk__api__show_ar.snap  kube_do_spec__gvk__gvk_spec__tests__gvk_spec.snap
spec/src/ksvc/: api.rs  ksvc.rs  ksvc_api.rs  mod.rs
spec/src/ksvc/snapshots/: kube_do_spec__ksvc__api__test__show_api.snap  kube_do_spec__ksvc__ksvc__default_works.snap  kube_do_spec__ksvc__ksvc__ksvc_into_gvk.snap  kube_do_spec__ksvc__ksvc__ksvc_works.snap  kube_do_spec__ksvc__ksvc__show_do.snap  kube_do_spec__ksvc__ksvc__spec_works.snap  kube_do_spec__ksvc__ksvc__test__default_works.snap  kube_do_spec__ksvc__ksvc__test__ksvc_into_gvk.snap.new  kube_do_spec__ksvc__ksvc__test__show_do.snap  kube_do_spec__ksvc__ksvc__test__spec_works.snap  kube_do_spec__ksvc__ksvc_api__show_api.snap  kube_do_spec__ksvc__ksvc_api__show_ar.snap
spec/src/snapshots/: kube_do_spec__ksvc__ksvc_into_gvk.snap  kube_do_spec__ksvc__ksvc_works.snap  kube_do_spec__ksvc__spec_works.snap
spec/tests/: get_apit_feature.rs  get_apit_feature2.rs  gvk.rs  gvk_doc.rs  main.rs
spec/tests/features/: get_api.feature
spec/tests/snapshots/: get_apit_feature__show_api.snap  get_apit_feature__show_api@8081-alpine.snap  get_apit_feature__show_api@label-2.snap  get_apit_feature__show_api@label.snap  main__main.snap
src/: dynamic_object_req.rs  main.rs  req_builder.rs
try/derive_builder/: Cargo.toml  test_derive_builder.rs  test_derive_builder_no_default.rs
try/req_builder/: Cargo.toml  client.rs  gvk.rs  ksvc.rs  req_builder.rs  req_builder_err.rs  req_builder_old0.rs
