[package]
edition = "2021"
name = "kube-do-spec"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.58"
async-trait = "0.1.56"
async_once = "0.2.6"
derive_builder = "0.11.2"
educe = "^0.4.19"
envconfig = "^0.10.0"
insta = "1.15.0"
k8s-openapi = {version = "0.15.0", features = ["v1_24"], default-features = false}
kube = {version = "^0.73.0", features = ["runtime", "derive"]}
lazy_static = "1.4.0"
serde = "^1.0.138"
serde_json = "^1.0.82"
tokio = {version = "^1.19.2", features = ["full"]}
[dev-dependencies]
cucumber = "^0.13.0"
insta = "1.15.0"
proptest = "^1"
serial_test = "^0.8.0"

# [[test]]
# harness = false 
# name = "get_apit_feature" # this should be the same as the filename of your test target
