[package]
authors = [
  "hz <805104533@qq.com>",
]
edition = "2021"
name = "try_derive_builder"
version = "0.1.0"

[dependencies]
derive_builder = "0.11.2"

[[example]]

name = "test_derive_builder"
path = "test_derive_builder.rs"

[[example]]
name = "test_derive_builder_no_default"
path = "test_derive_builder_no_default.rs"
# [[example]]

# name = "req_builder"
# path = "req_builder.rs"
