[package]
authors = [
  "hz <805104533@qq.com>",
]
edition = "2021"
name = "req_builder"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [features]
# latest = ["k8s-openapi/v1_24"]

[dependencies]
anyhow = "^1.0.58"
# async-once-cell = "0.4.2"
async-trait = "0.1.56"
async_once = "0.2.6"
derive_builder = "0.11.2"
educe = "^0.4.19"
k8s-openapi = {version = "0.15.0", features = ["v1_24"]}
kube = {version = "^0.74.0", features = ["runtime", "derive"]}
lazy_static = "1.4.0"
serde = "^1.0.138"
serde_json = "^1.0.82"
tokio = {version = "^1.19.2", features = ["full"]}

# [[example]]
# name = "req_builder"
# path = "req_builder.rs"
[[example]]
name = "req_builder"
path = "req_builder.rs"
[[example]]
name = "ksvc"
path = "ksvc.rs"
